--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="home">
   <div class="full-hero hero-home">
     <div class="hero-content">
-      <h1>CODE DANGEROUSLY</h1>
+      <h1>anonamuse-bouche</h1>
       <ul class="hero-social social-list">
         {% include social-list.html %}
       </ul>
@@ -12,7 +12,7 @@ layout: default
   </div>
 
   <div class="home-callout">
-    <h1 class="callout-title">The Learn Enough Story</h1>
+    <h1 class="callout-title">anonamuse-bouche</h1>
     <div class="callout-copy">
       <p>
         Learn Enough to Be Dangerous is a leader in the movement to teach the world
